--- a/fixedhtml.html
+++ b/fixedhtml.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="This is a purposed HTML file with errors for use in a WDD130 activity.">
         <title>Problem HTML File</title>
-        <link rel="stylesheet" href="css/invalid.css">
+        <link rel="stylesheet" href="css/fixedcss.css">
     </head>
 
     <body> 
