site plan error fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <h2>Assignment Links</h2>
                 <ul>
                   <li>Week 1: <a href="#">No Web Submission</a></li>
-                  <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li
+                  <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
                   <li>Week 3: <a href="fixedhtml.html">Troubleshoot Code</a></li>
                 </ul>
               </main>
