--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                   <li>Week 1: <a href="#">No Web Submission</a></li>
                   <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
                   <li>Week 3: <a href="fixedhtml.html">Troubleshoot Code</a></li>
+                  <li>Week 3: <a href="project/">Homepage Project</a></li>
                 </ul>
               </main>
               <footer>
