additional html and css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                   <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
                   <li>Week 3: <a href="fixedhtml.html">Troubleshoot Code</a></li>
                   <li>Week 3: <a href="project/">Homepage Project</a></li>
+                  <li>Week 4: <a href="project/">Adding More HTML and CSS</a></li>
                 </ul>
               </main>
               <footer>
