--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -11,25 +12,51 @@
 
 <body>
     <header>
+        <img src="images/icon-optimized.jpg" alt="Logo">
         <h1>Temple Inn and Suites</h1>
 
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="amentities.html">Amentities</a></li>
-                <li><a href="">Temple Spotlight</a></li>
-                <li><a href="">Reservations</a></li>
+                <li><a href="#">Amentities</a></li>
+                <li><a href="#">Temple Spotlight</a></li>
+                <li><a href="#">Reservations</a></li>
+
             </ul>
         </nav>
     </header>
     <main>
+        <div class="hero">
+            <img src="images/Billings-banner.jpg" alt="Billings Temple">
+        </div>
         <section>
-            <h2>Section 1</h2>
+            <h2>Your Home Away From Home</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
                 Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
                 molestias soluta provident.</p>
-            <img src="https://dummyimage.com/600x400/000/fff" alt="Placeholder">
+            <img src="images/" alt="Mexico City">
+        </section>
+        <section>
+            <h2>Section 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
+                Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
+                molestias soluta provident.</p>
+            <img src="images/mexicomonterrey-temple.jpg" alt="Monterrey Mexico">
+        </section>
+        <section>
+            <h2>Section 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
+                Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
+                molestias soluta provident.</p>
         </section>
     </main>
-    <footer>Caleb Hunt | Temple Inn & Suites | 208-486-9991</footer>
+    <footer>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon.jpg" alt="Facebook Logo"></a>
+            <a href="https://instagram.com" target="_blank"> <img src="images/instagram-icon.jpg"
+                    alt="Instagram Logo"></a>
+            <a href="https://twitter.com" target="_blank"> <img src="images/twitter-icon.jpg" alt="Twitter Logo"></a>
+        </div>
+        Caleb Hunt | Temple Inn & Suites | 208-486-9991
+    </footer>
 </body>
