--- a/project/index.html
+++ b/project/index.html
@@ -34,7 +34,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
                 Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
                 molestias soluta provident.</p>
-            <img src="images/" alt="Mexico City">
+            <img src="images/ciudadmexico-temple.jpg" alt="Mexico City">
         </section>
         <section>
             <h2>Section 2</h2>
@@ -51,12 +51,21 @@
         </section>
     </main>
     <footer>
+        <div class="info">
+            <p>📍Temple Inn and Suites Main Office</p>
+            <p>355 Wisconsin Ave</p>
+            <p>Bethseda, MD 20814</p>
+            <P>📞215-829-9999</P>
+            <p>✉info@templinn.com</p>
+            <br>
+            <p>Caleb Hunt | Temple Inn & Suites | 208-486-9991</p>
+        </div>
         <div class="social">
             <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon.jpg" alt="Facebook Logo"></a>
             <a href="https://instagram.com" target="_blank"> <img src="images/instagram-icon.jpg"
                     alt="Instagram Logo"></a>
             <a href="https://twitter.com" target="_blank"> <img src="images/twitter-icon.jpg" alt="Twitter Logo"></a>
         </div>
-        Caleb Hunt | Temple Inn & Suites | 208-486-9991
+        
     </footer>
 </body>
