--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                   <li>Week 3: <a href="fixedhtml.html">Troubleshoot Code</a></li>
                   <li>Week 3: <a href="project/">Homepage Project</a></li>
                   <li>Week 4: <a href="project/">Adding More HTML and CSS</a></li>
+                  <li>Week 5: <a href="project/">CSS-Fonts and Spacing</a></li>
                 </ul>
               </main>
               <footer>
