--- a/project/index.html
+++ b/project/index.html
@@ -52,13 +52,13 @@
     </main>
     <footer>
         <div class="info">
-            <p>📍Temple Inn and Suites Main Office</p>
+            <p>📍 Temple Inn and Suites Main Office</p>
             <p>355 Wisconsin Ave</p>
             <p>Bethseda, MD 20814</p>
-            <P>📞215-829-9999</P>
-            <p>✉info@templinn.com</p>
+            <P>📞 215-829-9999</P>
+            <p>✉ info@templinn.com</p>
             <br>
-            <p>Caleb Hunt | Temple Inn & Suites | 208-486-9991</p>
+            <p>Caleb Hunt |Copyright 2020 ©Temple Inn & Suites | All Rights Reserved</p>
         </div>
         <div class="social">
             <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon.jpg" alt="Facebook Logo"></a>
