--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                   <li>Week 3: <a href="project/">Homepage Project</a></li>
                   <li>Week 4: <a href="project/">Adding More HTML and CSS</a></li>
                   <li>Week 5: <a href="project/">CSS-Fonts and Spacing</a></li>
+                  <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
                 </ul>
               </main>
               <footer>
