--- a/project/index.html
+++ b/project/index.html
@@ -12,9 +12,10 @@
 
 <body>
     <header>
-        <img src="images/icon-optimized.jpg" alt="Logo">
+        <div class="header">
+            <img src="images/icon-optimizednbg.png" alt="Logo">
+        </div>
         <h1>Temple Inn and Suites</h1>
-
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -27,45 +28,72 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/Billings-banner.jpg" alt="Billings Temple">
+            <img src="images/treesopt.jpg" alt="banner">
         </div>
-        <section>
-            <h2>Your Home Away From Home</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
-                Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
-                molestias soluta provident.</p>
-            <img src="images/ciudadmexico-temple.jpg" alt="Mexico City">
+        <div class="banner-box">
+            <img class="banner" src="images/hotelopt.jpg" alt="hotel banner">
+            <div class="action">
+                <h3>
+                    Plan your next adventure with us!
+                </h3>
+                <button>Contact Us</button>
+            </div>
+        </div>
+        <section class="section1">
+                <h2 class= "title1">Your Home Away From Home</h2>
+            <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, placeat earum sed
+                repudiandae
+                quisquam, nulla quos architecto aperiam maxime asperiores enim odio quis ullam molestiae rerum, libero
+                facere tempore dolorum veritatis soluta molestias dolor aut. Saepe voluptatum praesentium quis eos
+                impedit totam asperiores modi ducimus deleniti nam sunt quia ipsum, doloribus iste, nemo, neque dolorum
+                cumque esse distinctio. Assumenda, vero suscipit eaque deserunt fuga nobis magni iure repellat impedit
+                aspernatur voluptatem officia?</p>
+                <img src="images/ciudadmexico-temple.jpg" class="img1" alt="Mexico City">
         </section>
-        <section>
-            <h2>Section 2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
-                Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
-                molestias soluta provident.</p>
-            <img src="images/mexicomonterrey-temple.jpg" alt="Monterrey Mexico">
+        <section class="section2">
+                <h2 class="title2">Section 2</h2>
+            <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda delectus laborum natus
+                provident, nam,
+                modi quam facere unde sunt odio deserunt quo dolorum. Suscipit, itaque est. Quidem quisquam recusandae
+                obcaecati deleniti sequi corporis voluptatibus esse voluptatum, omnis accusantium iure neque cum fugit
+                beatae eos aspernatur ratione quae, debitis numquam expedita non. Iusto ut exercitationem, maxime natus
+                dignissimos minima corporis at dolores in, repellat nulla tempore ipsum? Ab nemo reiciendis dolores
+                tempore quos qui ipsam magni obcaecati sunt illum odio consectetur exercitationem, natus alias
+                laboriosam maiores. Perspiciatis nobis atque odit maiores at ipsum iste, ratione magni quod doloribus,
+                est dolorum? Provident!</p>
+                <img src="images/mexicomonterrey-temple.jpg" class="img2" alt="Monterrey Mexico">
         </section>
-        <section>
-            <h2>Section 3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, fugit in. Autem praesentium labore vel!
-                Inventore perferendis nemo, illum vel, rerum accusamus quae in, possimus necessitatibus aspernatur
-                molestias soluta provident.</p>
+        <section class="section3">
+            <h2 class="title3">Section 3</h2>
+            <p class="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quasi, porro numquam
+                aspernatur error
+                maiores commodi est quos atque! Nemo aliquam iusto aperiam amet a? Recusandae ipsa error perspiciatis
+                aut omnis molestiae nemo, quos impedit illum soluta sit natus qui, minus odit? Doloremque natus officiis
+                aspernatur quos alias ea libero impedit! Accusantium, numquam alias, assumenda aliquam cupiditate id
+                iure inventore non vitae quas mollitia ullam nesciunt molestias enim eveniet libero ratione rem unde
+                quasi? Rerum deleniti neque eius unde laborum possimus, repellat corporis officia tempora in tenetur rem
+                molestiae a libero expedita. Ea delectus totam quasi, repellendus doloribus alias qui natus impedit,
+                voluptatem illo nemo reprehenderit molestias ullam. Natus est praesentium molestias atque odit mollitia
+                corrupti nisi, voluptas minima. Cupiditate quo unde, sequi enim saepe animi libero blanditiis
+                praesentium ipsam ducimus voluptatum ratione optio voluptate accusamus nam quia, facilis qui eum, ipsa
+                similique fugit omnis? Aspernatur tempora cum nostrum nisi.</p>
         </section>
     </main>
     <footer>
         <div class="info">
             <p>📍 Temple Inn and Suites Main Office</p>
-            <p>355 Wisconsin Ave</p>
-            <p>Bethseda, MD 20814</p>
+            <p> 355 Wisconsin Ave</p>
+            <p> Bethseda, MD 20814</p>
             <P>📞 215-829-9999</P>
             <p>✉ info@templinn.com</p>
             <br>
             <p>Caleb Hunt |Copyright 2020 ©Temple Inn & Suites | All Rights Reserved</p>
         </div>
         <div class="social">
-            <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon.jpg" alt="Facebook Logo"></a>
-            <a href="https://instagram.com" target="_blank"> <img src="images/instagram-icon.jpg"
-                    alt="Instagram Logo"></a>
-            <a href="https://twitter.com" target="_blank"> <img src="images/twitter-icon.jpg" alt="Twitter Logo"></a>
+            <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon2.png" class="fb" alt="Facebook Logo"></a>
+            <a href="https://instagram.com" target="_blank"> <img src="images/betterinsta.png" class="ig" alt="Instagram Logo"></a>
+            <a href="https://twitter.com" target="_blank"> <img src="images/twitter2.png" class="tw" alt="Twitter Logo"></a>
         </div>
-        
+
     </footer>
 </body>
