--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
-        <head>
-            <meta charset="utf-8">
-            <title>Index</title>
-        </head>
-        <body>
-            <header>
-                <h1>WDD 130 Assignment Portal</h1>
-              </header>
-              <main>
-                <h2>Assignment Links</h2>
-                <ul>
-                  <li>Week 1: <a href="#">No Web Submission</a></li>
-                  <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
-                  <li>Week 3: <a href="fixedhtml.html">Troubleshoot Code</a></li>
-                  <li>Week 3: <a href="project/">Homepage Project</a></li>
-                  <li>Week 4: <a href="project/">Adding More HTML and CSS</a></li>
-                  <li>Week 5: <a href="project/">CSS-Fonts and Spacing</a></li>
-                  <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
-                  <li>Week 7: <a href="project/">Finish the Project Homepage</a></li>
-                </ul>
-              </main>
-              <footer>
-                &copy;2020 | Caleb Hunt | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
-              </footer>
-        </body>
-    </html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Caleb Hunt Assignment Portal</title>
+</head>
+
+<body>
+  <header>
+    <h1>WDD 130 Assignment Portal</h1>
+  </header>
+  <main>
+    <h2>Assignment Links</h2>
+    <ul>
+      <li>Week 1: <a href="#">No Web Submission</a></li>
+      <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
+      <li>Week 3: <a href="fixedhtml.html">Troubleshoot Code</a></li>
+      <li>Week 3: <a href="project/">Homepage Project</a></li>
+      <li>Week 4: <a href="project/">Adding More HTML and CSS</a></li>
+      <li>Week 5: <a href="project/">CSS-Fonts and Spacing</a></li>
+      <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
+      <li>Week 7: <a href="project/">Finish the Project Homepage</a></li>
+      <li>Week 8: <a href="https://wireframe.cc/F204DG">Wireframe Amenities Page</a></li>
+      <li>Week 8: <a href="https://wireframe.cc/5jTBxU">Wireframe Temple Spotlight Page</a></li>
+    </ul>
+  </main>
+  <footer>
+    &copy;2020 | Caleb Hunt | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online
+      Learning</a>
+  </footer>
+</body>
+
+</html>
