--- a/project/index.html
+++ b/project/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <section class="section1">
-                <h2 class= "title1">Your Home Away From Home</h2>
+            <h2 class="title1">Your Home Away From Home</h2>
             <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, placeat earum sed
                 repudiandae
                 quisquam, nulla quos architecto aperiam maxime asperiores enim odio quis ullam molestiae rerum, libero
@@ -48,10 +48,10 @@
                 impedit totam asperiores modi ducimus deleniti nam sunt quia ipsum, doloribus iste, nemo, neque dolorum
                 cumque esse distinctio. Assumenda, vero suscipit eaque deserunt fuga nobis magni iure repellat impedit
                 aspernatur voluptatem officia?</p>
-                <img src="images/ciudadmexico-temple.jpg" class="img1" alt="Mexico City">
+            <img src="images/ciudadmexico-temple.jpg" class="img1" alt="Mexico City">
         </section>
         <section class="section2">
-                <h2 class="title2">Section 2</h2>
+            <h2 class="title2">Section 2</h2>
             <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda delectus laborum natus
                 provident, nam,
                 modi quam facere unde sunt odio deserunt quo dolorum. Suscipit, itaque est. Quidem quisquam recusandae
@@ -61,7 +61,7 @@
                 tempore quos qui ipsam magni obcaecati sunt illum odio consectetur exercitationem, natus alias
                 laboriosam maiores. Perspiciatis nobis atque odit maiores at ipsum iste, ratione magni quod doloribus,
                 est dolorum? Provident!</p>
-                <img src="images/mexicomonterrey-temple.jpg" class="img2" alt="Monterrey Mexico">
+            <img src="images/mexicomonterrey-temple.jpg" class="img2" alt="Monterrey Mexico">
         </section>
         <section class="section3">
             <h2 class="title3">Section 3</h2>
@@ -90,9 +90,12 @@
             <p>Caleb Hunt |Copyright 2020 ©Temple Inn & Suites | All Rights Reserved</p>
         </div>
         <div class="social">
-            <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon2.png" class="fb" alt="Facebook Logo"></a>
-            <a href="https://instagram.com" target="_blank"> <img src="images/betterinsta.png" class="ig" alt="Instagram Logo"></a>
-            <a href="https://twitter.com" target="_blank"> <img src="images/twitter2.png" class="tw" alt="Twitter Logo"></a>
+            <a href="https://facebook.com" target="_blank"> <img src="images/facebook-icon2.png" class="fb"
+                    alt="Facebook Logo"></a>
+            <a href="https://instagram.com" target="_blank"> <img src="images/betterinsta.png" class="ig"
+                    alt="Instagram Logo"></a>
+            <a href="https://twitter.com" target="_blank"> <img src="images/twitter3.png" class="tw"
+                    alt="Twitter Logo"></a>
         </div>
 
     </footer>
