--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li>Week 7: <a href="project/">Finish the Project Homepage</a></li>
       <li>Week 8: <a href="https://wireframe.cc/F204DG">Wireframe Amenities Page</a></li>
       <li>Week 8: <a href="https://wireframe.cc/5jTBxU">Wireframe Temple Spotlight Page</a></li>
+      <li>Week 9: <a href="final-site-plan.html">Final Site Plan</a></li>
     </ul>
   </main>
   <footer>
