--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>Week 8: <a href="https://wireframe.cc/5jTBxU">Wireframe Temple Spotlight Page</a></li>
       <li>Week 9: <a href="final-site-plan.html">Final Site Plan</a></li>
       <li>Week 9: <a href="forms.html">Forms Assignment</a></li>
+      <li>Week 10: <a href="project/">Project Site Completion</a></li>
     </ul>
   </main>
   <footer>
