--- a/project/index.html
+++ b/project/index.html
@@ -18,10 +18,10 @@
         <h1>Temple Inn and Suites</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Amentities</a></li>
-                <li><a href="#">Temple Spotlight</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="amenities.html">Amentities</a></li>
+                <li><a href="temple-spot.html">Temple Spotlight</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
 
             </ul>
         </nav>
