--- a/final-site-plan.html
+++ b/final-site-plan.html
@@ -9,19 +9,20 @@
 
 <body>
     <header>
-        <h1>CNH CPA's Site Plan</h1>
+        <h1>Guerilla Fitness Site Plan</h1>
         <div class="signature">Caleb Hunt</div>
     </header>
     <main>
         <h2>Overview</h2>
         <h3>Purpose</h3>
-        <p>Provide necessary information to potential clients in an attractive and simple way.</p>
+        <p>Provide an attractive, user-friendly interface to people interested in joining and learning about my unique
+            gym.</p>
         <h3>Audience</h3>
-        <p> Anyone who pays taxes but doesn’t want the hassle of actually doing them. Most likely people with several
-            sources of income, self employed, and small businesses </p>
+        <p> Anyone who is looking for a new, affordable place to work out with a wide variety of equipment and helpful
+            trainers if desired.</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
-        <img src="images/iconfinder_67_5027861.png" alt="CNH CPA's Logo" />
+        <img src="images/Guerilla-icon.png" alt="Guerilla Fitness Logo" />
         <hr />
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
@@ -42,21 +43,29 @@
             </tr>
         </table>
         <h4>Normal paragraph example</h4>
-        <p>Anyone who pays taxes but doesn’t want the hassle of actually doing them. Most likely people with several
-            sources of income, self employed, and small businesses</p>
+        <p>Here at Guerilla Fitness we offer a wide variety of equipment, ranging from traditional to exclusive.</p>
         <h4>Colored paragraph example</h4>
-        <p class="colored">Meet with one of our friendly, experienced CPA's to get the most of your tax return this
-            year. </p>
+        <p class="colored">Meet with one of our friendly, experienced trainers to get personalized training to receive
+            the results that you want. </p>
         <h3>Navigation</h3>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Meet the Team</a></li>
+                <li><a href="#">Benefits</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Additional Help</a></li>
             </ul>
         </nav>
+        <h4>Wireframe</h4>
+        <section class="wireframe">
+            <u1>
+                <li><a href="https://wireframe.cc/4KK40E">Guerilla Wireframe</a></li>
+            </u1>
+        </section>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>Caleb Hunt | BYU-Idaho | WDD 130 - Web Fundamentals</footer>
 </body>
 
