--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li>Week 9: <a href="final-site-plan.html">Final Site Plan</a></li>
       <li>Week 9: <a href="forms.html">Forms Assignment</a></li>
       <li>Week 10: <a href="project/">Project Site Completion</a></li>
+      <li>Week 11: <a href="final-site-plan.html">Final Site Plan</a></li>
     </ul>
   </main>
   <footer>
