--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li>Week 10: <a href="project/">Project Site Completion</a></li>
       <li>Week 11: <a href="final-site-plan.html">Final Site Plan</a></li>
       <li>Week 12: <a href="card.html">Card</a></li>
+      <li>Week 13: <a href="final/">Peer Review Final Project</a></li>
     </ul>
   </main>
   <footer>
