--- a/final/guerilla.html
+++ b/final/guerilla.html
@@ -18,9 +18,9 @@
         <h1>Guerrilla Fitness</h1>
         <nav>
             <ul>
-                <li><a href="guerilla.html">Home</a></li>
-                <li><a href="training.html">Training</a></li>
-                <li><a href="join.html">Join Us</a></li>
+                <li><a href="guerilla.html">HOME</a></li>
+                <li><a href="training.html">TRAINING</a></li>
+                <li><a href="join.html">JOIN US</a></li>
 
             </ul>
         </nav>
@@ -29,15 +29,7 @@
         <div class="hero">
             <img src="images/gym-banner2.jpg" alt="banner">
         </div>
-        <div class="banner-box">
-            <img class="banner" src="" alt="box picture">
-            <div class="action">
-                <h3>
-                    Join Us Today!
-                </h3>
-                <button>Contact Us</button>
-            </div>
-        </div>
+
         <h2 class="title1">Home</h2>
         <section class="section1">
             <h3 class="title2">Who We Are</h3>
