--- a/final/join.html
+++ b/final/join.html
@@ -17,9 +17,9 @@
         <h1>Guerrilla Fitness</h1>
         <nav>
             <ul>
-                <li><a href="guerilla.html">Home</a></li>
-                <li><a href="training.html">Training</a></li>
-                <li><a href="join.html">Join Us</a></li>
+                <li><a href="guerilla.html">HOME</a></li>
+                <li><a href="training.html">TRAINING</a></li>
+                <li><a href="join.html">JOIN US</a></li>
 
             </ul>
         </nav>
