--- a/final/training.html
+++ b/final/training.html
@@ -17,9 +17,9 @@
         <h1>Guerrilla Fitness</h1>
         <nav>
             <ul>
-                <li><a href="guerilla.html">Home</a></li>
-                <li><a href="training.html">Training</a></li>
-                <li><a href="join.html">Join Us</a></li>
+                <li><a href="guerilla.html">HOME</a></li>
+                <li><a href="training.html">TRAINING</a></li>
+                <li><a href="join.html">JOIN US</a></li>
 
             </ul>
         </nav>
@@ -27,7 +27,7 @@
     <main class="mt">
         <h2>Training</h2>
         <p class="tren">At Guerrilla Fitness we offer a wide variety of equipment and resources to help you train how
-            you want to train.</p>
+            YOU want to train.</p>
         <div class="intrack">
             <img src="images/indoor_track.jpg" class="img1t" alt="Indoor Track">
             <h4 class="i1t">Indoor Track</h4>
@@ -36,7 +36,7 @@
             <img src="images/martial_arts.jpg" class="img2t" alt="Martial Arts">
             <h4 class="i2t">Martial Arts</h4>
             <img src="images/personal_trainer.jpg" class="img3t" alt="Personal Trainer">
-            <h4 class="i3t">Personal Trainer</h4>
+            <h4 class="i3t">Experienced Personal Trainers</h4>
             <img src="images/rope_course.jpg" class="img4t" alt="Rope Course">
             <h4 class="i4t">Guerrilla Rope Course</h4>
             <img src="images/yoga_class.jpg" class="img6t" alt="Yoga Class">
@@ -47,7 +47,7 @@
             <h4 class="wt">Weight Lifting</h4>
         </div>
     </main>
-    <footer>
+    <footer class="foott">
         <div class="info">
             <p>📍 Guerrilla Fitness</p>
             <p> 445 Charle Ave</p>
