--- a/final/training.html
+++ b/final/training.html
@@ -17,7 +17,7 @@
         <h1>Guerrilla Fitness</h1>
         <nav>
             <ul>
-                <li><a href="guerilla.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="training.html">TRAINING</a></li>
                 <li><a href="join.html">JOIN US</a></li>
 
@@ -38,7 +38,7 @@
             <img src="images/personal_trainer.jpg" class="img3t" alt="Personal Trainer">
             <h4 class="i3t">Experienced Personal Trainers</h4>
             <img src="images/rope_course.jpg" class="img4t" alt="Rope Course">
-            <h4 class="i4t">Guerrilla Rope Course</h4>
+            <h4 class="i4t">Guerrilla Training Course</h4>
             <img src="images/yoga_class.jpg" class="img6t" alt="Yoga Class">
             <h4 class="i6t">Yoga Classes</h4>
         </section>
