--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li>Week 11: <a href="final-site-plan.html">Final Site Plan</a></li>
       <li>Week 12: <a href="card.html">Card</a></li>
       <li>Week 13: <a href="final/">Peer Review Final Project</a></li>
+      <li>Week 14: <a href="final/">Final Project</a></li>
     </ul>
   </main>
   <footer>
