--- a/final/index.html
+++ b/final/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="guerilla.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Guerilla Fitness is a balanced gym that satisfies the needs of any gym-goer">
+    <meta name="description" content="Guerilla Fitness is a balanced gym that satisfies the needs of any gym-goer">
     <title>Guerilla Fitness</title>
 </head>
 
@@ -18,7 +17,7 @@
         <h1>Guerrilla Fitness</h1>
         <nav>
             <ul>
-                <li><a href="guerilla.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="training.html">TRAINING</a></li>
                 <li><a href="join.html">JOIN US</a></li>
 
@@ -33,26 +32,18 @@
         <h2 class="title1">Home</h2>
         <section class="section1">
             <h3 class="title2">Who We Are</h3>
-            <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, placeat earum sed
-                repudiandae
-                quisquam, nulla quos architecto aperiam maxime asperiores enim odio quis ullam molestiae rerum, libero
-                facere tempore dolorum veritatis soluta molestias dolor aut. Saepe voluptatum praesentium quis eos
-                impedit totam asperiores modi ducimus deleniti nam sunt quia ipsum, doloribus iste, nemo, neque dolorum
-                cumque esse distinctio. Assumenda, vero suscipit eaque deserunt fuga nobis magni iure repellat impedit
-                aspernatur voluptatem officia?</p>
+            <p class="p1">At Guerrilla Fitness, our main objective is to satisfy. We offer a wide selection of stations
+                and activities to help you grow in the way that you want to grow. This selection includes a large array
+                of free weights for lifters of all fitness levels, cardio machines, yoga classes, an outdoor and indoor
+                track, and our signature Guerrilla training room. We also have a carefully selected staff of trainers who will guide
+                you to get the results you were thinking about when you made that New Year's resolution.</p>
             <img src="images/gym-1.jpg" class="img1" alt="Gym 1">
         </section>
         <section class="section2">
-            <h3 class="title3">What Gives Us the Right</h3>
-            <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda delectus laborum natus
-                provident, nam,
-                modi quam facere unde sunt odio deserunt quo dolorum. Suscipit, itaque est. Quidem quisquam recusandae
-                obcaecati deleniti sequi corporis voluptatibus esse voluptatum, omnis accusantium iure neque cum fugit
-                beatae eos aspernatur ratione quae, debitis numquam expedita non. Iusto ut exercitationem, maxime natus
-                dignissimos minima corporis at dolores in, repellat nulla tempore ipsum? Ab nemo reiciendis dolores
-                tempore quos qui ipsam magni obcaecati sunt illum odio consectetur exercitationem, natus alias
-                laboriosam maiores. Perspiciatis nobis atque odit maiores at ipsum iste, ratione magni quod doloribus,
-                est dolorum? Provident!</p>
+            <h3 class="title3">Our Mission</h3>
+            <p class="p2">Our mission is to provide an entertaining, educational, friendly & inviting, and unique
+                experience of unmatched quality that meets the health and fitness needs of everyone who has the desire
+                to better themselves.</p>
             <img src="images/gym-2.jpg" class="img2" alt="Gym 2">
         </section>
 
