--- a/final/join.html
+++ b/final/join.html
@@ -28,6 +28,7 @@
     <section class="section1j">
         <h2>Join Us</h2>
     </section>
+    <img src="images/rope_tall.jpg" class="imgj1" alt="tall rope">
     <section class="section2j"></section>
 <p class="p1c">Please fill out all applicable fields</p>
     <div id="feedback"></div>
