--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Caleb Hunt Assignment Portal</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
+    <img src="imgs/CalebWaterFallsmol.jpg" alt="Caleb photo" />
     <h1>Caleb Hunt</h1>
   </header>
   <main>
@@ -19,9 +21,11 @@
     </ul>
   </main>
   <footer>
-    &copy;2020 | Caleb Hunt | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online
+    &copy; <span id="year"></span>> | Caleb Hunt | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online
       Learning</a>
+      <p>Last Modified: <span id="moddate"></span></p>
   </footer>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
