--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Caleb Hunt Assignment Portal</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -21,9 +21,10 @@
     </ul>
   </main>
   <footer>
-    &copy; <span id="year"></span>> | Caleb Hunt | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online
+    &copy; <span id="year"></span> | Caleb Hunt | Idaho | <a href="https://www.byui.edu/online"
+      target="_blank">BYU-Idaho Online
       Learning</a>
-      <p>Last Modified: <span id="moddate"></span></p>
+    <p>Last Modified: <span id="moddate"></span></p>
   </footer>
   <script src="js/index.js"></script>
 </body>
