--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>Caleb Hunt Assignment Portal</title>
   <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Caleb Hunt WDD 230 Assignment Portal home page BYUI 2021" />
 </head>
 
 <body>
   <header>
-    <img src="imgs/CalebWaterFallsmol.jpg" alt="Caleb photo" />
+    <img src="images/CalebWaterFallsmol.jpg" alt="Caleb photo" />
     <h1>Caleb Hunt</h1>
   </header>
   <main>
